--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <!--TEMPLATE DESIGNED BY VYSHNAV NK-->
-	
+	<meta name="google-site-verification" content="bNs4JQaZATyBBb7L3N67XSXT0CFkB67XIliMORL--cg" />
 
 	<link href="examples/fixed-positioning.css" rel="stylesheet" type="text/css" />
 	<link href="examples/main.css" rel="stylesheet" type="text/css" />
